# jwt

./: Cargo.toml  README.md  TODO.md  shell.nix
src/: cli.rs  error.rs  jwks.rs  jwt.rs  main.rs
src/command/: decode.rs
