[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "0.10.41"
clap = { version = "3.2.22", features = ["derive", "env"] }
atty = "0.2.14"
ansi_term = "0.12.1"
thiserror = "1.0.36"
base64 = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
copypasta = "0.8.1"
indenter = { version = "0.3.3", features = ["std"] }
